--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "jellyfin-api-client"
-version = "10.8.10"
+version = "10.8.10.post1"
 description = "A client library for accessing Jellyfin API"
 authors = [
   "Geoffrey Coulaud <geoffrey.coulaud@gmail.com>"
